--- a/Navigine/res/layout/settings.xml
+++ b/Navigine/res/layout/settings.xml
@@ -5,41 +5,52 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     
-    <!-- Background navigation mode: idle/normal/economic/super economic -->
-    <RadioGroup
+    <LinearLayout android:orientation="horizontal"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
         
         <TextView android:id="@+id/settings__background_navigation_label"
-            android:layout_width="fill_parent"
-            android:layout_height="30dp"
-            android:gravity="left|bottom"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:gravity="left"
             android:textSize="14sp"
             android:text="Background navigation mode:"/>
         
-        <RadioButton android:id="@+id/radio_normal_mode"
-            android:layout_width="wrap_content"
+        <CheckBox android:id="@+id/settings__background_navigation_checkbox"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Normal"
-            android:onClick="onRadioButtonClicked"/>
-        
-        <RadioButton android:id="@+id/radio_economic_mode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Economic"
-            android:onClick="onRadioButtonClicked"/>
-        
-        <RadioButton android:id="@+id/radio_economic2_mode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Super economic"
-            android:onClick="onRadioButtonClicked"/>
+            android:layout_weight="1"/>
+    </LinearLayout>
     
-        <RadioButton android:id="@+id/radio_idle_mode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Idle"
+    <!-- Background navigation mode: normal/economic/super economic -->
+    <RadioGroup android:id="@+id/settings__radio_group"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        
+        <RadioButton android:id="@+id/settings__radio_normal_mode"
+            android:layout_width="0dp"
+            android:layout_height="45dp"
+            android:layout_weight="1"
+            android:textSize="14sp"
+            android:text="NORM"
+            android:onClick="onRadioButtonClicked"/>
+        
+        <RadioButton android:id="@+id/settings__radio_economic_mode"
+            android:layout_width="0dp"
+            android:layout_height="45dp"
+            android:layout_weight="1"
+            android:textSize="14sp"
+            android:text="ECO-1"
+            android:onClick="onRadioButtonClicked"/>
+        
+        <RadioButton android:id="@+id/settings__radio_economic2_mode"
+            android:layout_width="0dp"
+            android:layout_height="45dp"
+            android:layout_weight="1"
+            android:textSize="14sp"
+            android:text="ECO-2"
             android:onClick="onRadioButtonClicked"/>
     </RadioGroup>
     
@@ -51,7 +62,7 @@
         <TextView android:id="@+id/settings__beacon_service_label"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:gravity="left"
             android:textSize="14sp"
             android:text="Beacon service"/>
@@ -71,7 +82,7 @@
         <TextView android:id="@+id/settings__navigation_server_label"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:gravity="left"
             android:textSize="14sp"
             android:text="Navigation server"/>
@@ -85,7 +96,7 @@
     <!-- Navigation server address -->
     <EditText android:id="@+id/settings__navigation_server_address_edit"
         android:layout_width="fill_parent"
-        android:layout_height="50dp"
+        android:layout_height="45dp"
         android:scrollHorizontally="true"
         android:singleLine="true"/>
     
@@ -97,7 +108,7 @@
         <TextView android:id="@+id/settings__save_navigation_log_label"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:gravity="left"
             android:textSize="14sp"
             android:text="Save navigation log"/>
@@ -116,7 +127,7 @@
         <TextView android:id="@+id/settings__save_navigation_track_label"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:gravity="left"
             android:textSize="14sp"
             android:text="Save navigation track"/>
@@ -135,7 +146,7 @@
         <TextView android:id="@+id/settings__post_messages_enabled_label"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:gravity="left"
             android:textSize="14sp"
             android:text="POST messages enabled"/>
@@ -144,6 +155,26 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"/>
+    </LinearLayout>
+    
+    <!-- File mode navigation -->
+    <LinearLayout android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+        
+        <TextView android:id="@+id/settings__navigation_file_enabled_label"
+            android:layout_width="0dp"
+            android:layout_height="90dp"
+            android:layout_weight="2"
+            android:gravity="left"
+            android:textSize="14sp"
+            android:text="Navigation file enabled"/>
+        
+        <CheckBox android:id="@+id/settings__navigation_file_enabled_checkbox"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+        
     </LinearLayout>
     
     <!-- Vertical stretch -->
