--- a/Navigine/res/layout/navigation.xml
+++ b/Navigine/res/layout/navigation.xml
@@ -14,6 +14,15 @@
         android:layout_marginBottom="10dp"
         android:layout_gravity="right|bottom"/>    
     
+    <TextView android:id="@+id/navigation_info_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:layout_marginBottom="10dp"
+        android:background="#EC7703"
+        android:textSize="16dp"
+        android:textColor="#000000"/>
+    
     <ImageView android:id="@+id/icons_image_view"
         android:layout_width="100dp"
         android:layout_height="30dp"
