--- a/Navigine/res/layout/settings.xml
+++ b/Navigine/res/layout/settings.xml
@@ -154,6 +154,26 @@
             android:layout_weight="1"/>
     </LinearLayout>
     
+    <!-- Debug mode enabled -->
+    <LinearLayout android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+        
+        <TextView android:id="@+id/settings__debug_mode_enabled_label"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:gravity="left"
+            android:textSize="14sp"
+            android:text="Debug mode enabled"/>
+        
+        <CheckBox android:id="@+id/settings__debug_mode_enabled_checkbox"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+        
+    </LinearLayout>
+    
     <!-- File mode navigation -->
     <LinearLayout android:orientation="horizontal"
         android:layout_width="fill_parent"
@@ -161,7 +181,7 @@
         
         <TextView android:id="@+id/settings__navigation_file_enabled_label"
             android:layout_width="0dp"
-            android:layout_height="90dp"
+            android:layout_height="wrap_content"
             android:layout_weight="2"
             android:gravity="left"
             android:textSize="14sp"
