--- a/Navigine/res/layout/main.xml
+++ b/Navigine/res/layout/main.xml
@@ -12,42 +12,61 @@
         android:layout_centerInParent="true"
         android:orientation="vertical">
         
-        <Button android:id="@+id/location_management_button"
+        <Button android:id="@+id/main_mode__login_button"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:layout_margin="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:drawableLeft="@drawable/login"
+            android:text="Login"
+            android:textSize="20dp"/>
+        
+        <Button android:id="@+id/main_mode__location_management_button"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
             android:drawableLeft="@drawable/synchronize"
             android:text="Location management"
             android:textSize="20dp"/>
         
-        <Button android:id="@+id/navigation_mode_button"
+        <Button android:id="@+id/main_mode__navigation_mode_button"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:layout_margin="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
             android:drawableLeft="@drawable/navigation"
             android:text="Navigation mode"
             android:textSize="20dp"/>
         
-        <Button android:id="@+id/measuring_mode_button"
+        <Button android:id="@+id/main_mode__measuring_mode_button"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:layout_margin="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
             android:drawableLeft="@drawable/measuring"
             android:text="Measuring mode"
             android:textSize="20dp"/>
         
-        <Button android:id="@+id/text_mode_button"
+        <Button android:id="@+id/main_mode__text_mode_button"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:layout_margin="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
             android:drawableLeft="@drawable/console"
             android:text="Debug mode"
             android:textSize="20dp"/>
         
-        <Button android:id="@+id/settings_button"
+        <Button android:id="@+id/main_mode__settings_button"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:layout_margin="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
             android:drawableLeft="@drawable/settings"
             android:text="Settings"
             android:textSize="20dp"/>
