--- a/Navigine/res/layout/measuring_mode.xml
+++ b/Navigine/res/layout/measuring_mode.xml
@@ -1,96 +1,316 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#14273D">
     
-    <ImageView android:id="@+id/measuring_mode__map_image"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"/>
-    
-    <ImageView android:id="@+id/measuring_mode__center_target_image"
-        android:src="@drawable/target"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
-    
-    <ImageView android:id="@+id/measuring_mode__scale_image"
-        android:layout_width="100dp"
-        android:layout_height="30dp"
-        android:layout_marginBottom="10dp"
-        android:layout_gravity="right|bottom"/>
-    
-    <LinearLayout android:id="@+id/measuring_mode__measuring_panel_layout"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+    <!-- Top bar layout -->
+    <LinearLayout android:id="@+id/measuring_mode__top_layout"
         android:orientation="horizontal"
-        android:background="#AA000001">
-        
-        <TextView android:id="@+id/measuring_mode__measuring_panel_prompt_label"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_margin="10dp"
-            android:layout_weight="1.0"
-            android:textSize="15dp"
-            android:background="@null"/>
-        
-        <Button android:id="@+id/measuring_mode__measuring_panel_start_button"
-            android:layout_width="60dp"
-            android:layout_height="40dp"
-            android:layout_margin="10dp"
-            android:background="#00000001"
-            android:text="@string/start_button"/>
-        
-        <Button android:id="@+id/measuring_mode__measuring_panel_stop_button"
-            android:layout_width="60dp"
-            android:layout_height="40dp"
-            android:layout_margin="10dp"
-            android:background="#00000001"
-            android:text="@string/stop_button"/>
-    
-    </LinearLayout>
-    
-    <Button android:id="@+id/measuring_mode__prev_floor_button"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="25dp"
         android:layout_marginLeft="0dp"
-        android:layout_gravity="top|left"
-        android:background="@drawable/back"/>
-    
-    <TextView android:id="@+id/measuring_mode__current_floor_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|center"
-        android:textSize="20dp"
-        android:textColor="#000000"/>
+        android:background="#14273D">
         
-    <Button android:id="@+id/measuring_mode__next_floor_button"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_marginRight="0dp"
-        android:layout_gravity="top|right"
-        android:background="@drawable/forward"/>
-    
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|right">
+        <Button android:id="@+id/measuring_mode__menu_button"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="5dp"
+            android:onClick="toggleMenuLayout"
+            android:background="@drawable/btn_menu"/>
             
-        <Button android:id="@+id/measuring_mode__add_point_button"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginBottom="20dp"
-            android:background="#80000001"
-            android:textSize="20sp"
-            android:text="+P"/>
+        <TextView android:id="@+id/measuring_mode__name_text_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textSize="16sp"
+            android:text="MEASURING MODE"/>
         
-        <Button android:id="@+id/measuring_mode__add_beacon_button"
+        <Button android:id="@+id/measuring_mode__upload_button"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:background="#80000001"
-            android:textSize="20sp"
-            android:text="+B"/>
+            android:layout_marginRight="5dp"
+            android:onClick="onUploadMap"
+            android:background="@drawable/btn_upload_map"/>
+        
+        <ProgressBar android:id="@+id/measuring_mode__upload_progress_bar"
+            android:indeterminate="true"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp"/>
     </LinearLayout>
+    
+    <!-- Main layout -->
+    <FrameLayout android:id="@+id/measuring_mode__main_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_marginTop="75dp">
         
-</FrameLayout>
+        <ImageView android:id="@+id/measuring_mode__map_image"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"/>
+        
+        <ImageView android:id="@+id/measuring_mode__ext_image"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"/>
+        
+        <ImageView android:id="@+id/measuring_mode__center_target_image"
+            android:src="@drawable/target"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
+        
+        <!-- Next/prev floor panel -->
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|right"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="100dp"
+            android:layout_marginRight="15dp">
+            
+            <!-- Previous floor button -->
+            <FrameLayout android:id="@+id/measuring_mode__prev_floor_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#90aaaaaa">
+            
+                <Button android:id="@+id/measuring_mode__prev_floor_button"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:onClick="onPrevFloor"
+                    android:background="@drawable/btn_prev_floor"/>
+            </FrameLayout>
+        
+            <!-- Current floor label -->
+            <TextView android:id="@+id/measuring_mode__current_floor_label"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:textSize="20dp"
+                android:textColor="#000000"
+                android:background="#90dddddd"/>
+                
+            <!-- Next floor button -->
+            <FrameLayout android:id="@+id/measuring_mode__next_floor_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#90aaaaaa">
+            
+                <Button android:id="@+id/measuring_mode__next_floor_button"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:onClick="onNextFloor"
+                    android:background="@drawable/btn_next_floor"/>
+            </FrameLayout>
+            
+            <View
+                android:layout_width="1dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+            
+            <FrameLayout android:id="@+id/measuring_mode__show_percentage_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#90dddddd">
+                
+                <Button android:id="@+id/measuring_mode__show_percentage_button"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:onClick="onTogglePercentage"
+                    android:background="@drawable/btn_show_percentage"/>
+            </FrameLayout>
+            
+            <FrameLayout android:id="@+id/measuring_mode__show_labels_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#90dddddd">
+                
+                <Button android:id="@+id/measuring_mode__show_labels_button"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:onClick="onToggleLabels"
+                    android:background="@drawable/btn_show_labels"/>
+            </FrameLayout>
+        </LinearLayout>
+        
+        <!-- Progress panel -->
+        <FrameLayout android:id="@+id/measuring_mode__progress_panel"
+            android:layout_width="fill_parent"
+            android:layout_height="40dp"
+            android:layout_gravity="top|left"
+            android:background="@android:color/transparent">
+            
+            <ProgressBar android:id="@+id/measuring_mode__progress_bar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:max="100"
+                android:minHeight="40dp"
+                android:maxHeight="40dp"
+                android:progressDrawable="@drawable/measuring_progress_bar"/>
+            
+            <TextView android:id="@+id/measuring_mode__progress_label"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:gravity="center"
+                android:textSize="16dp"
+                android:textColor="#000000"/>
+        </FrameLayout>
+        
+        <!-- Measuring panel -->
+        <FrameLayout android:id="@+id/measuring_mode__measuring_panel"
+            android:layout_width="fill_parent"
+            android:layout_height="70dp"
+            android:layout_gravity="bottom|left"
+            android:layout_marginLeft="0dp"
+            android:layout_marginBottom="50dp"
+            android:background="#E8E6E6E6">
+            
+            <TextView android:id="@+id/measuring_mode__measuring_prompt"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:gravity="center"
+                android:onClick="onStopMeasuring"
+                android:textSize="16dp"
+                android:textColor="#14273D"/>
+            
+        </FrameLayout>
+        
+        <!-- Bottom panel: add point/beacon buttons -->
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="50dp"
+            android:layout_gravity="bottom|left"
+            android:layout_marginLeft="0dp"
+            android:layout_marginBottom="0dp"
+            android:background="#E8E6E6E6">
+            
+            <View
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_weight="1"/>
+            
+            <Button android:id="@+id/measuring_mode__add_point_button"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:onClick="onAddPoint"
+                android:background="@drawable/btn_add_point"/>
+            
+            <View
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_weight="1"/>
+            
+            <Button android:id="@+id/measuring_mode__add_beacon_button"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:onClick="onAddBeacon"
+                android:background="@drawable/btn_add_beacon"/>
+            
+            <View
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_weight="1"/>
+        </LinearLayout>
+        
+    </FrameLayout> <!-- Main layout -->
+
+    <!-- Menu layout -->
+    <LinearLayout android:id="@+id/measuring_mode__menu_layout"
+        android:orientation="vertical"
+        android:layout_width="251dp"
+        android:layout_height="fill_parent"
+        android:layout_marginLeft="-251dp"
+        android:background="#132133"
+        android:visibility="gone">
+        
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="40dp"
+            android:gravity="left"
+            android:textSize="28sp"
+            android:text="Navigine"/>
+        
+        <View
+            android:layout_width="1dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        
+        <TextView android:id="@+id/measuring_mode__menu_location_management_mode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginBottom="30dp"
+            android:clickable="true"
+            android:onClick="onLocationManagementMode"
+            android:gravity="left"
+            android:textSize="20sp"
+            android:text="Location management"/>
+        
+        <TextView android:id="@+id/measuring_mode__menu_measuring_mode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginBottom="30dp"
+            android:clickable="true"
+            android:onClick="onMeasuringMode"
+            android:gravity="left"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:text="Measuring mode"/>
+        
+        <TextView android:id="@+id/measuring_mode__menu_navigation_mode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginBottom="30dp"
+            android:clickable="true"
+            android:onClick="onNavigationMode"
+            android:gravity="left"
+            android:textSize="20sp"
+            android:text="Navigation mode"/>
+        
+        <TextView android:id="@+id/measuring_mode__menu_debug_mode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginBottom="30dp"
+            android:clickable="true"
+            android:onClick="onDebugMode"
+            android:gravity="left"
+            android:textSize="20sp"
+            android:text="Debug mode"/>
+        
+        <TextView android:id="@+id/measuring_mode__menu_settings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:clickable="true"
+            android:onClick="onSettingsMode"
+            android:gravity="left"
+            android:textSize="20sp"
+            android:text="Settings"/>
+        
+        <View
+            android:layout_width="1dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        
+        <Space
+            android:layout_width="1dp"
+            android:layout_height="60dp"/>
+    </LinearLayout> <!-- Menu layout -->
+    
+</RelativeLayout>
+
