--- a/Navigine/res/layout/measuring_object_dialog.xml
+++ b/Navigine/res/layout/measuring_object_dialog.xml
@@ -1,51 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    android:background="#E6E6E6">
     
-    <!-- Beacon major -->
+    <TextView android:id="@+id/measuring_object_dialog__title_label"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="15dp"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:textColor="#14273D"/>
+    
+    <!-- Name -->
     <LinearLayout android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginRight="20dp">
         
-        <TextView android:id="@+id/measuring_object_dialog__beacon_major_label"
+        <TextView android:id="@+id/measuring_object_dialog__name_label"
             android:layout_width="100dp"
             android:layout_height="50dp"
             android:gravity="center"
             android:textSize="20sp"
-            android:text="Major"/>
+            android:textColor="#14273D"
+            android:text="Name"/>
         
-        <EditText android:id="@+id/measuring_object_dialog__beacon_major_edit"
+        <EditText android:id="@+id/measuring_object_dialog__name_edit"
             android:layout_width="fill_parent"
             android:layout_height="50dp"
             android:scrollHorizontally="true"
-            android:digits="1234567890"
-            android:maxLength="5"
-            android:singleLine="true"/>
-    </LinearLayout>
-    
-    <!-- Beacon minor -->
-    <LinearLayout android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="20dp">
-        
-        <TextView android:id="@+id/measuring_object_dialog__beacon_minor_label"
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:gravity="center"
-            android:textSize="20sp"
-            android:text="Minor"/>
-        
-        <EditText android:id="@+id/measuring_object_dialog__beacon_minor_edit"
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:scrollHorizontally="true"
-            android:digits="1234567890"
-            android:maxLength="5"
+            android:digits="1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz._- "
+            android:maxLength="20"
+            android:textColor="#40A3CD"
             android:singleLine="true"/>
     </LinearLayout>
     
@@ -60,6 +50,7 @@
             android:layout_height="50dp"
             android:gravity="center"
             android:textSize="20sp"
+            android:textColor="#14273D"
             android:text="UUID"/>
         
         <EditText android:id="@+id/measuring_object_dialog__beacon_uuid_edit"
@@ -68,28 +59,55 @@
             android:scrollHorizontally="true"
             android:digits="1234567890ABCDEFabcdef-"
             android:maxLength="40"
+            android:textColor="#40A3CD"
             android:singleLine="true"/>
     </LinearLayout>
     
-    <!-- Name -->
+    <!-- Beacon major -->
     <LinearLayout android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginRight="20dp">
         
-        <TextView android:id="@+id/measuring_object_dialog__name_label"
+        <TextView android:id="@+id/measuring_object_dialog__beacon_major_label"
             android:layout_width="100dp"
             android:layout_height="50dp"
             android:gravity="center"
             android:textSize="20sp"
-            android:text="Name"/>
+            android:textColor="#14273D"
+            android:text="Major"/>
         
-        <EditText android:id="@+id/measuring_object_dialog__name_edit"
+        <EditText android:id="@+id/measuring_object_dialog__beacon_major_edit"
             android:layout_width="fill_parent"
             android:layout_height="50dp"
             android:scrollHorizontally="true"
-            android:digits="1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz._- "
-            android:maxLength="20"
+            android:digits="1234567890"
+            android:maxLength="5"
+            android:singleLine="true"
+            android:textColor="#40A3CD"/>
+    </LinearLayout>
+    
+    <!-- Beacon minor -->
+    <LinearLayout android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="20dp">
+        
+        <TextView android:id="@+id/measuring_object_dialog__beacon_minor_label"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:textColor="#14273D"
+            android:text="Minor"/>
+        
+        <EditText android:id="@+id/measuring_object_dialog__beacon_minor_edit"
+            android:layout_width="fill_parent"
+            android:layout_height="50dp"
+            android:scrollHorizontally="true"
+            android:digits="1234567890"
+            android:maxLength="5"
+            android:textColor="#40A3CD"
             android:singleLine="true"/>
     </LinearLayout>
     
@@ -104,6 +122,7 @@
             android:layout_height="50dp"
             android:gravity="center"
             android:textSize="20sp"
+            android:textColor="#14273D"
             android:text="X"/>
         
         <EditText android:id="@+id/measuring_object_dialog__x_edit"
@@ -112,6 +131,7 @@
             android:scrollHorizontally="true"
             android:digits="1234567890."
             android:maxLength="10"
+            android:textColor="#40A3CD"
             android:singleLine="true"/>
     </LinearLayout>
     
@@ -126,6 +146,7 @@
             android:layout_height="50dp"
             android:gravity="center"
             android:textSize="20sp"
+            android:textColor="#14273D"
             android:text="Y"/>
         
         <EditText android:id="@+id/measuring_object_dialog__y_edit"
@@ -134,6 +155,7 @@
             android:scrollHorizontally="true"
             android:digits="1234567890."
             android:maxLength="10"
+            android:textColor="#40A3CD"
             android:singleLine="true"/>
     </LinearLayout>
     
@@ -148,25 +170,40 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textColor="#FF8C00"
-            android:textSize="12sp"
-            android:text="START MEASURING"/>
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginBottom="5dp"
+            android:textColor="#40A3CD"
+            android:textSize="14sp"
+            android:text="START"
+            android:background="#90dddddd"/>
         
         <Button android:id="@+id/measuring_object_dialog__delete_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginBottom="5dp"
             android:textColor="#FF4500"
-            android:textSize="12sp"
-            android:text="DELETE"/>
+            android:textSize="14sp"
+            android:text="DELETE"
+            android:background="#90dddddd"/>
         
         <Button android:id="@+id/measuring_object_dialog__cancel_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp"
             android:textColor="#FF8C00"
-            android:textSize="12sp"
-            android:text="CANCEL"/>
+            android:textSize="14sp"
+            android:text="CANCEL"
+            android:background="#90dddddd"/>
     
     </LinearLayout>
     
