--- a/Navigine/res/layout/splash.xml
+++ b/Navigine/res/layout/splash.xml
@@ -12,6 +12,19 @@
         android:src="@drawable/elm_splashlogo"
         android:layout_gravity="center|top"/>
     
+    <TextView android:id="@+id/splash__error_label"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="100dp"
+        android:layout_gravity="center|bottom"
+        android:gravity="center"
+        android:textSize="16dp"
+        android:maxLines="5"
+        android:textColor="#80CC5A5A"
+        android:text="Error loading NavigineSDK! It seems that your device is not supported yet! Please, contact technical support"/>
+        
     <TextView android:id="@+id/splash_mode__demo_app"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
