--- a/Navigine/res/layout/navigation.xml
+++ b/Navigine/res/layout/navigation.xml
@@ -29,6 +29,13 @@
             android:textSize="16sp"
             android:text="NAVIGATION MODE"/>
         
+        <!--<Button android:id="@+id/navigation__recorder_button"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="5dp"
+            android:onClick="toggleRecorderMode"
+            android:background="@drawable/btn_recorder"/> -->
+        
         <Button android:id="@+id/navigation__imu_button"
             android:layout_width="50dp"
             android:layout_height="50dp"
