--- a/GeoService/GeoServiceApp/res/layout/main.xml
+++ b/GeoService/GeoServiceApp/res/layout/main.xml
@@ -4,10 +4,6 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
     
-    <TextView android:id="@+id/text_view"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"/>
-    
     <Button android:id="@+id/start_button"
         android:layout_width="200dp"
         android:layout_height="100dp"
@@ -15,5 +11,10 @@
         android:onClick="onToggleService"
         android:textSize="16dp"
         android:text="Start service"/>
+    
+    <TextView android:id="@+id/text_view"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"/>
     
 </LinearLayout>
